--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "bin": "index.js",
   "scripts": {
-    "dev": "node index.js",
+    "dev": "nodemon index.js",
     "pkg": "pkg . --targets node20-win-x64 --output index.exe"
   },
   "keywords": [],
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "grammy": "^1.34.0",
     "input": "^1.0.1",
+    "nodemon": "^3.1.9",
     "telegram": "^2.26.16"
   }
 }
