--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "grabber-exe",
-  "version": "1.0.0",
+  "name": "node-grabber-exe",
+  "version": "0.0.1",
   "main": "index.js",
-  "bin": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon index.js",
-    "pkg": "pkg . --targets node20-win-x64 --output index.exe"
+    "test": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@mtcute/node": "^0.21.0",
     "dotenv": "^16.4.7",
-    "grammy": "^1.34.0",
-    "input": "^1.0.1",
-    "nodemon": "^3.1.9",
-    "telegram": "^2.26.16"
+    "pkg": "^5.8.1"
   }
 }
