feat: add peer to proper func and resending messages to self

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@mtcute/dispatcher": "^0.21.0",
     "@mtcute/node": "^0.21.0",
     "dotenv": "^16.4.7",
     "pkg": "^5.8.1"
